# GLIN-26.6.5

./: .gitignore  CMakeLists.txt  README.md  build.sh
dataPrepare/: wktCSVtoZvalue.cpp
docs/: AutoDL代码环境配置.md  DELI-Adaptive-PRL-Fusion设计草案.md  DELI-Cost实现步骤.md  DELI-Fusion-Phase0复现.md  DELI索引版本说明.md  HIRE-SFC-Full完整复现路线.md  HIRE-SFC-Lite复现.md  RLR-tree复现.md  all_1m_runner.md  deli_alex_hybrid_local_bounded索引策略参数化.md  deli_cost_adaptive_research_plan.md  deli_dynamic_methods_guide.md  glin_lsm_progress_summary.md  interval_overlap_full_1000000_analysis.md  interval_overlap_index_design.md  interval_overlap_runner_zh.md  main_tex_structure_and_review.md  synthetic_points.md  vldb_story_and_next_steps.md  改进优化思路.md
glin/: glin.h
java/jts-query-generator/: README.md  pom.xml
java/jts-query-generator/src/main/java/org/glin/repro/: JtsKnnQueryGenerator.java
manuscript/pvldbstyle-master/: main.blg  main.fdb_latexmk  main.fls  main.tex  main.xdv
scripts/: cmake_build_helpers.sh  convert_binary_points_to_wkt.cpp  generate_jts_strtree_knn_queries.sh  generate_synthetic_points.cpp  generate_synthetic_rectangles.cpp  plot_all_1m_summary.py  plot_aw1m_knn_summary.py  plot_dynamic_compare_diagnostics.py  plot_dynamic_extent_diagnostics.py  plot_fig15_16_update_curves.py  plot_fig15_16_updates.py  plot_fig15_insert_diagnostics.py  plot_fig17_hybrid.py  plot_fig5_zrange_cdf.py  plot_fig8_index_size.py  plot_glin_vs_boost.py  plot_interval_overlap_diagnostics.py  plot_parks1m_knn_summary.py  plot_piece_limit_sweep.py  plot_piece_limit_vs_boost.py  prepare_glin_synthetic_geo_points.sh  prepare_synthetic_points.sh  prepare_synthetic_rectangles.sh  prepare_zrange_gap_dataset.sh  prepare_zrange_mixed_dataset.sh  run_all_1m.sh  run_deli_fusion_phase0_ablation.sh  run_dynamic_compare_diagnostics.sh  run_dynamic_extent_diagnostics.sh  run_fig15_16_update_progress_1m.sh  run_fig15_insert_diagnostics.sh  run_fig17_hybrid_1m.sh  run_fig5_zrange_cdf.sh  run_fig8_index_size.sh  run_hire_sfc_full_ablation.sh  run_hire_sfc_stage7_acceptance.sh  run_interval_overlap_diagnostics.sh  run_parks1m_jts_piece_limit_sweep.sh  run_parks1m_jts_quadtree.sh  script_execution_instructions.md  (+9 more)
src/benchmark/: bench_boost_rtree_wkt.cpp  bench_dynamic_compare_wkt.cpp  bench_dynamic_extent_wkt.cpp  bench_geos_quadtree_wkt.cpp  bench_glin_wkt.cpp  bench_hybrid_wkt.cpp  bench_index_size_wkt.cpp  bench_interval_overlap_wkt.cpp  bench_update_wkt.cpp  export_zrange_cdf_wkt.cpp  generate_wkt_queries.cpp  hire_bulk_loading.h  hire_internal_directory.h  hire_sfc_lite_index.h  rectangle_predicate_shortcut.h
src/benchmark/rlr_lite/: rlr_lite_index.h
src/core/: alex.h
test/: hire_internal_directory_test.cpp  hire_sfc_stage2_test.cpp  hire_sfc_stage3_cost_test.cpp  hire_sfc_stage4_rcu_test.cpp  hire_sfc_stage5_transform_test.cpp  hire_sfc_stage6_bulk_test.cpp  hire_sfc_stage7_acceptance_test.cpp  rectangle_predicate_shortcut_test.cpp  unittest_main.cpp
